// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render full simple table 1`] = `
<div>
  <div
    class="tableContainer"
  >
    <div
      class="table"
    >
      <div
        class="gridRow"
      >
        <div
          class="frozenColumnsGridContainer"
          style="top: 0px;"
        >
          <div
            class="headerGrid"
            style="position: relative; height: 50px; width: 50px; overflow: auto; will-change: transform; direction: ltr;"
          >
            <div
              style="height: 50px; width: 50px;"
            >
              <div
                class="headerCell headerRow COLUMN_SELECT-header singleIcon isRightmostFrozenColumn"
                style="position: absolute; left: 0px; top: 0px; height: 50px; width: 50px;"
              >
                <div
                  class="headerText"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-78 MuiCheckbox-root indeterminate MuiCheckbox-colorPrimary MuiCheckbox-indeterminate PrivateSwitchBase-checked-79 Mui-checked MuiIconButton-colorPrimary"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        checked=""
                        class="PrivateSwitchBase-input-81"
                        data-indeterminate="true"
                        data-testid="table-checkbox-header"
                        type="checkbox"
                        value=""
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10H7v-2h10v2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="frozenColumnsGridContainer"
          style="top: 50px;"
        >
          <div
            class="frozenColumnsGrid"
            style="position: relative; height: 230px; width: 50px; overflow: auto; will-change: transform; direction: ltr;"
          >
            <div
              style="height: 300px; width: 50px;"
            >
              <div
                class="checkBoxColumn largeWideTableCell singleIcon isRightmostFrozenColumn"
                data-cell-id="First Datum-0"
                style="position: absolute; left: 0px; top: 0px; height: 50px; width: 50px;"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-78 MuiCheckbox-root active MuiCheckbox-colorPrimary PrivateSwitchBase-checked-79 Mui-checked MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      checked=""
                      class="PrivateSwitchBase-input-81"
                      data-indeterminate="false"
                      data-testid="table-checkbox-cell-first-datum"
                      id="First Datum"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
              </div>
              <div
                class="checkBoxColumn largeWideTableCell singleIcon isRightmostFrozenColumn"
                data-cell-id="Fourth Datum-0"
                style="position: absolute; left: 0px; top: 50px; height: 50px; width: 50px;"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-78 MuiCheckbox-root active MuiCheckbox-colorPrimary PrivateSwitchBase-checked-79 Mui-checked MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      checked=""
                      class="PrivateSwitchBase-input-81"
                      data-indeterminate="false"
                      data-testid="table-checkbox-cell-fourth-datum"
                      id="Fourth Datum"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
              </div>
              <div
                class="checkBoxColumn largeWideTableCell singleIcon isRightmostFrozenColumn"
                data-cell-id="Seventh Datum-0"
                style="position: absolute; left: 0px; top: 100px; height: 50px; width: 50px;"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-78 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-81"
                      data-indeterminate="false"
                      data-testid="table-checkbox-cell-seventh-datum"
                      id="Seventh Datum"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
              </div>
              <div
                class="checkBoxColumn largeWideTableCell singleIcon isRightmostFrozenColumn"
                data-cell-id="Tenth Datum-0"
                style="position: absolute; left: 0px; top: 150px; height: 50px; width: 50px;"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-78 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-81"
                      data-indeterminate="false"
                      data-testid="table-checkbox-cell-tenth-datum"
                      id="Tenth Datum"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
              </div>
              <div
                class="checkBoxColumn largeWideTableCell singleIcon isRightmostFrozenColumn"
                data-cell-id="Thirteenth Datum-0"
                style="position: absolute; left: 0px; top: 200px; height: 50px; width: 50px;"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-78 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-81"
                      data-indeterminate="false"
                      data-testid="table-checkbox-cell-thirteenth-datum"
                      id="Thirteenth Datum"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
              </div>
              <div
                class="checkBoxColumn largeWideTableCell singleIcon isRightmostFrozenColumn"
                data-cell-id="Seventeenth Datum-0"
                style="position: absolute; left: 0px; top: 250px; height: 50px; width: 50px;"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-78 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-81"
                      data-indeterminate="false"
                      data-testid="table-checkbox-cell-seventeenth-datum"
                      id="Seventeenth Datum"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="gridColumn"
        >
          <div
            style="overflow: visible; width: 0px;"
          />
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1px; height: 1px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render full simple table 2`] = `
<div>
  <div
    class="tableContainer"
  >
    <div
      class="table"
    >
      <div
        class="gridRow"
      >
        <div
          class="frozenColumnsGridContainer"
          style="top: 0px;"
        >
          <div
            class="headerGrid"
            style="position: relative; height: 50px; width: 200px; overflow: auto; will-change: transform; direction: ltr;"
          >
            <div
              style="height: 50px; width: 200px;"
            >
              <div
                class="headerCell headerRow COLUMN_SELECT-header singleIcon"
                style="position: absolute; left: 0px; top: 0px; height: 50px; width: 50px;"
              >
                <div
                  class="headerText"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-190 MuiCheckbox-root indeterminate MuiCheckbox-colorPrimary MuiCheckbox-indeterminate PrivateSwitchBase-checked-191 Mui-checked MuiIconButton-colorPrimary"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        checked=""
                        class="PrivateSwitchBase-input-193"
                        data-indeterminate="true"
                        data-testid="table-checkbox-header"
                        type="checkbox"
                        value=""
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10H7v-2h10v2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </span>
                </div>
              </div>
              <div
                class="headerCell headerRow columnOne-header tableHeader isRightmostFrozenColumn"
                style="position: absolute; left: 50px; top: 0px; height: 50px; width: 150px;"
              >
                <div
                  class="headerText"
                >
                  Column One
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="frozenColumnsGridContainer"
          style="top: 50px;"
        >
          <div
            class="frozenColumnsGrid"
            style="position: relative; height: 230px; width: 200px; overflow: auto; will-change: transform; direction: ltr;"
          >
            <div
              style="height: 300px; width: 200px;"
            >
              <div
                class="checkBoxColumn largeWideTableCell singleIcon"
                data-cell-id="First Datum-0"
                style="position: absolute; left: 0px; top: 0px; height: 50px; width: 50px;"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-190 MuiCheckbox-root active MuiCheckbox-colorPrimary PrivateSwitchBase-checked-191 Mui-checked MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      checked=""
                      class="PrivateSwitchBase-input-193"
                      data-indeterminate="false"
                      data-testid="table-checkbox-cell-first-datum"
                      id="First Datum"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
              </div>
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="First Datum-1"
                style="position: absolute; left: 50px; top: 0px; height: 50px; width: 150px;"
              >
                <span>
                  First Datum
                </span>
              </div>
              <div
                class="checkBoxColumn largeWideTableCell singleIcon"
                data-cell-id="Fourth Datum-0"
                style="position: absolute; left: 0px; top: 50px; height: 50px; width: 50px;"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-190 MuiCheckbox-root active MuiCheckbox-colorPrimary PrivateSwitchBase-checked-191 Mui-checked MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      checked=""
                      class="PrivateSwitchBase-input-193"
                      data-indeterminate="false"
                      data-testid="table-checkbox-cell-fourth-datum"
                      id="Fourth Datum"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
              </div>
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="Fourth Datum-1"
                style="position: absolute; left: 50px; top: 50px; height: 50px; width: 150px;"
              >
                <span>
                  Fourth Datum
                </span>
              </div>
              <div
                class="checkBoxColumn largeWideTableCell singleIcon"
                data-cell-id="Seventh Datum-0"
                style="position: absolute; left: 0px; top: 100px; height: 50px; width: 50px;"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-190 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-193"
                      data-indeterminate="false"
                      data-testid="table-checkbox-cell-seventh-datum"
                      id="Seventh Datum"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
              </div>
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="Seventh Datum-1"
                style="position: absolute; left: 50px; top: 100px; height: 50px; width: 150px;"
              >
                <span>
                  Seventh Datum
                </span>
              </div>
              <div
                class="checkBoxColumn largeWideTableCell singleIcon"
                data-cell-id="Tenth Datum-0"
                style="position: absolute; left: 0px; top: 150px; height: 50px; width: 50px;"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-190 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-193"
                      data-indeterminate="false"
                      data-testid="table-checkbox-cell-tenth-datum"
                      id="Tenth Datum"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
              </div>
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="Tenth Datum-1"
                style="position: absolute; left: 50px; top: 150px; height: 50px; width: 150px;"
              >
                <span>
                  Tenth Datum
                </span>
              </div>
              <div
                class="checkBoxColumn largeWideTableCell singleIcon"
                data-cell-id="Thirteenth Datum-0"
                style="position: absolute; left: 0px; top: 200px; height: 50px; width: 50px;"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-190 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-193"
                      data-indeterminate="false"
                      data-testid="table-checkbox-cell-thirteenth-datum"
                      id="Thirteenth Datum"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
              </div>
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="Thirteenth Datum-1"
                style="position: absolute; left: 50px; top: 200px; height: 50px; width: 150px;"
              >
                <span>
                  Thirteenth Datum
                </span>
              </div>
              <div
                class="checkBoxColumn largeWideTableCell singleIcon"
                data-cell-id="Seventeenth Datum-0"
                style="position: absolute; left: 0px; top: 250px; height: 50px; width: 50px;"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-190 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-193"
                      data-indeterminate="false"
                      data-testid="table-checkbox-cell-seventeenth-datum"
                      id="Seventeenth Datum"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
              </div>
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="Seventeenth Datum-1"
                style="position: absolute; left: 50px; top: 250px; height: 50px; width: 150px;"
              >
                <span>
                  Seventeenth Datum
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="gridColumn"
        >
          <div
            style="overflow: visible; width: 0px;"
          />
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1px; height: 1px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render large simple table 1`] = `
<div>
  <div
    class="tableContainer"
  >
    <div
      class="table"
    >
      <div
        class="gridRow"
      >
        <div
          class="frozenColumnsGridContainer"
          style="top: 0px;"
        >
          <div
            class="headerGrid"
            style="position: relative; height: 50px; width: 0px; overflow: auto; will-change: transform; direction: ltr;"
          >
            <div
              style="height: 50px; width: 0px;"
            />
          </div>
        </div>
        <div
          class="frozenColumnsGridContainer"
          style="top: 50px;"
        >
          <div
            class="frozenColumnsGrid"
            style="position: relative; height: 230px; width: 0px; overflow: auto; will-change: transform; direction: ltr;"
          >
            <div
              style="height: 300px; width: 0px;"
            />
          </div>
        </div>
        <div
          class="gridColumn"
        >
          <div
            style="overflow: visible; width: 0px;"
          />
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1px; height: 1px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render large simple table with all items selected 1`] = `
<div>
  <div
    class="tableContainer"
  >
    <div
      class="table"
    >
      <div
        class="gridRow"
      >
        <div
          class="frozenColumnsGridContainer"
          style="top: 0px;"
        >
          <div
            class="headerGrid"
            style="position: relative; height: 50px; width: 50px; overflow: auto; will-change: transform; direction: ltr;"
          >
            <div
              style="height: 50px; width: 50px;"
            >
              <div
                class="headerCell headerRow COLUMN_SELECT-header singleIcon isRightmostFrozenColumn"
                style="position: absolute; left: 0px; top: 0px; height: 50px; width: 50px;"
              >
                <div
                  class="headerText"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-37 MuiCheckbox-root indeterminate MuiCheckbox-colorPrimary MuiCheckbox-indeterminate PrivateSwitchBase-checked-38 Mui-checked MuiIconButton-colorPrimary"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        checked=""
                        class="PrivateSwitchBase-input-40"
                        data-indeterminate="true"
                        data-testid="table-checkbox-header"
                        type="checkbox"
                        value=""
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10H7v-2h10v2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="frozenColumnsGridContainer"
          style="top: 50px;"
        >
          <div
            class="frozenColumnsGrid"
            style="position: relative; height: 230px; width: 50px; overflow: auto; will-change: transform; direction: ltr;"
          >
            <div
              style="height: 300px; width: 50px;"
            >
              <div
                class="checkBoxColumn largeWideTableCell singleIcon isRightmostFrozenColumn"
                data-cell-id="First Datum-0"
                style="position: absolute; left: 0px; top: 0px; height: 50px; width: 50px;"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-37 MuiCheckbox-root active MuiCheckbox-colorPrimary PrivateSwitchBase-checked-38 Mui-checked MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      checked=""
                      class="PrivateSwitchBase-input-40"
                      data-indeterminate="false"
                      data-testid="table-checkbox-cell-first-datum"
                      id="First Datum"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
              </div>
              <div
                class="checkBoxColumn largeWideTableCell singleIcon isRightmostFrozenColumn"
                data-cell-id="Fourth Datum-0"
                style="position: absolute; left: 0px; top: 50px; height: 50px; width: 50px;"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-37 MuiCheckbox-root active MuiCheckbox-colorPrimary PrivateSwitchBase-checked-38 Mui-checked MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      checked=""
                      class="PrivateSwitchBase-input-40"
                      data-indeterminate="false"
                      data-testid="table-checkbox-cell-fourth-datum"
                      id="Fourth Datum"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
              </div>
              <div
                class="checkBoxColumn largeWideTableCell singleIcon isRightmostFrozenColumn"
                data-cell-id="Seventh Datum-0"
                style="position: absolute; left: 0px; top: 100px; height: 50px; width: 50px;"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-37 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-40"
                      data-indeterminate="false"
                      data-testid="table-checkbox-cell-seventh-datum"
                      id="Seventh Datum"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
              </div>
              <div
                class="checkBoxColumn largeWideTableCell singleIcon isRightmostFrozenColumn"
                data-cell-id="Tenth Datum-0"
                style="position: absolute; left: 0px; top: 150px; height: 50px; width: 50px;"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-37 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-40"
                      data-indeterminate="false"
                      data-testid="table-checkbox-cell-tenth-datum"
                      id="Tenth Datum"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
              </div>
              <div
                class="checkBoxColumn largeWideTableCell singleIcon isRightmostFrozenColumn"
                data-cell-id="Thirteenth Datum-0"
                style="position: absolute; left: 0px; top: 200px; height: 50px; width: 50px;"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-37 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-40"
                      data-indeterminate="false"
                      data-testid="table-checkbox-cell-thirteenth-datum"
                      id="Thirteenth Datum"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
              </div>
              <div
                class="checkBoxColumn largeWideTableCell singleIcon isRightmostFrozenColumn"
                data-cell-id="Seventeenth Datum-0"
                style="position: absolute; left: 0px; top: 250px; height: 50px; width: 50px;"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-37 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-40"
                      data-indeterminate="false"
                      data-testid="table-checkbox-cell-seventeenth-datum"
                      id="Seventeenth Datum"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="gridColumn"
        >
          <div
            style="overflow: visible; width: 0px;"
          />
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1px; height: 1px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render large simple table with no results 1`] = `
<div>
  <div
    class="tableContainer"
  >
    <p
      class="MuiTypography-root MuiTypography-body1"
    >
      No data
    </p>
  </div>
</div>
`;

exports[`render large simple table with no results and is loading 1`] = `
<div>
  <div
    class="tableContainer"
  >
    <div
      class="table"
    >
      <div
        class="gridRow"
      >
        <div
          class="frozenColumnsGridContainer"
          style="top: 0px;"
        >
          <div
            class="headerGrid"
            style="position: relative; height: 50px; width: 0px; overflow: auto; will-change: transform; direction: ltr;"
          >
            <div
              style="height: 50px; width: 0px;"
            />
          </div>
        </div>
        <div
          class="frozenColumnsGridContainer"
          style="top: 50px;"
        >
          <div
            class="frozenColumnsGrid"
            style="position: relative; height: 230px; width: 0px; overflow: auto; will-change: transform; direction: ltr;"
          >
            <div
              style="height: 0px; width: 0px;"
            />
          </div>
        </div>
        <div
          class="gridColumn"
        >
          <div
            style="overflow: visible; width: 0px;"
          />
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1px; height: 1px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="spinnerOverlay active"
      data-is-active="true"
      data-testid="spinner-overlay"
    >
      <div
        class="loading"
      />
    </div>
  </div>
</div>
`;

exports[`render large simple table with set row height 1`] = `
<div>
  <div
    class="tableContainer"
  >
    <div
      class="table"
    >
      <div
        class="gridRow"
      >
        <div
          class="frozenColumnsGridContainer"
          style="top: 0px;"
        >
          <div
            class="headerGrid"
            style="position: relative; height: 75px; width: 0px; overflow: auto; will-change: transform; direction: ltr;"
          >
            <div
              style="height: 50px; width: 0px;"
            />
          </div>
        </div>
        <div
          class="frozenColumnsGridContainer"
          style="top: 75px;"
        >
          <div
            class="frozenColumnsGrid"
            style="position: relative; height: 205px; width: 0px; overflow: auto; will-change: transform; direction: ltr;"
          >
            <div
              style="height: 300px; width: 0px;"
            />
          </div>
        </div>
        <div
          class="gridColumn"
        >
          <div
            style="overflow: visible; width: 0px;"
          />
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1px; height: 1px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render large wide simple table 1`] = `
<div>
  <div
    class="tableContainer"
  >
    <div
      class="table"
    >
      <div
        class="gridRow"
      >
        <div
          class="frozenColumnsGridContainer"
          style="top: 0px;"
        >
          <div
            class="headerGrid"
            style="position: relative; height: 50px; width: 150px; overflow: auto; will-change: transform; direction: ltr;"
          >
            <div
              style="height: 50px; width: 150px;"
            >
              <div
                class="headerCell headerRow columnOne-header tableHeader isRightmostFrozenColumn"
                style="position: absolute; left: 0px; top: 0px; height: 50px; width: 150px;"
              >
                <div
                  class="headerText"
                >
                  Column One
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="frozenColumnsGridContainer"
          style="top: 50px;"
        >
          <div
            class="frozenColumnsGrid"
            style="position: relative; height: 230px; width: 150px; overflow: auto; will-change: transform; direction: ltr;"
          >
            <div
              style="height: 300px; width: 150px;"
            >
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="0-0"
                style="position: absolute; left: 0px; top: 0px; height: 50px; width: 150px;"
              >
                <span>
                  First Datum
                </span>
              </div>
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="1-0"
                style="position: absolute; left: 0px; top: 50px; height: 50px; width: 150px;"
              >
                <span>
                  Fourth Datum
                </span>
              </div>
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="2-0"
                style="position: absolute; left: 0px; top: 100px; height: 50px; width: 150px;"
              >
                <span>
                  Seventh Datum
                </span>
              </div>
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="3-0"
                style="position: absolute; left: 0px; top: 150px; height: 50px; width: 150px;"
              >
                <span>
                  Tenth Datum
                </span>
              </div>
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="4-0"
                style="position: absolute; left: 0px; top: 200px; height: 50px; width: 150px;"
              >
                <span>
                  Thirteenth Datum
                </span>
              </div>
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="5-0"
                style="position: absolute; left: 0px; top: 250px; height: 50px; width: 150px;"
              >
                <span>
                  Seventeenth Datum
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="gridColumn"
        >
          <div
            style="overflow: visible; width: 0px;"
          />
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1px; height: 1px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render large wide simple table with all items selected 1`] = `
<div>
  <div
    class="tableContainer"
  >
    <div
      class="table"
    >
      <div
        class="gridRow"
      >
        <div
          class="frozenColumnsGridContainer"
          style="top: 0px;"
        >
          <div
            class="headerGrid"
            style="position: relative; height: 50px; width: 200px; overflow: auto; will-change: transform; direction: ltr;"
          >
            <div
              style="height: 50px; width: 200px;"
            >
              <div
                class="headerCell headerRow COLUMN_SELECT-header singleIcon"
                style="position: absolute; left: 0px; top: 0px; height: 50px; width: 50px;"
              >
                <div
                  class="headerText"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-149 MuiCheckbox-root indeterminate MuiCheckbox-colorPrimary MuiCheckbox-indeterminate PrivateSwitchBase-checked-150 Mui-checked MuiIconButton-colorPrimary"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        checked=""
                        class="PrivateSwitchBase-input-152"
                        data-indeterminate="true"
                        data-testid="table-checkbox-header"
                        type="checkbox"
                        value=""
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10H7v-2h10v2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </span>
                </div>
              </div>
              <div
                class="headerCell headerRow columnOne-header tableHeader isRightmostFrozenColumn"
                style="position: absolute; left: 50px; top: 0px; height: 50px; width: 150px;"
              >
                <div
                  class="headerText"
                >
                  Column One
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="frozenColumnsGridContainer"
          style="top: 50px;"
        >
          <div
            class="frozenColumnsGrid"
            style="position: relative; height: 230px; width: 200px; overflow: auto; will-change: transform; direction: ltr;"
          >
            <div
              style="height: 300px; width: 200px;"
            >
              <div
                class="checkBoxColumn largeWideTableCell singleIcon"
                data-cell-id="First Datum-0"
                style="position: absolute; left: 0px; top: 0px; height: 50px; width: 50px;"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-149 MuiCheckbox-root active MuiCheckbox-colorPrimary PrivateSwitchBase-checked-150 Mui-checked MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      checked=""
                      class="PrivateSwitchBase-input-152"
                      data-indeterminate="false"
                      data-testid="table-checkbox-cell-first-datum"
                      id="First Datum"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
              </div>
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="First Datum-1"
                style="position: absolute; left: 50px; top: 0px; height: 50px; width: 150px;"
              >
                <span>
                  First Datum
                </span>
              </div>
              <div
                class="checkBoxColumn largeWideTableCell singleIcon"
                data-cell-id="Fourth Datum-0"
                style="position: absolute; left: 0px; top: 50px; height: 50px; width: 50px;"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-149 MuiCheckbox-root active MuiCheckbox-colorPrimary PrivateSwitchBase-checked-150 Mui-checked MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      checked=""
                      class="PrivateSwitchBase-input-152"
                      data-indeterminate="false"
                      data-testid="table-checkbox-cell-fourth-datum"
                      id="Fourth Datum"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
              </div>
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="Fourth Datum-1"
                style="position: absolute; left: 50px; top: 50px; height: 50px; width: 150px;"
              >
                <span>
                  Fourth Datum
                </span>
              </div>
              <div
                class="checkBoxColumn largeWideTableCell singleIcon"
                data-cell-id="Seventh Datum-0"
                style="position: absolute; left: 0px; top: 100px; height: 50px; width: 50px;"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-149 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-152"
                      data-indeterminate="false"
                      data-testid="table-checkbox-cell-seventh-datum"
                      id="Seventh Datum"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
              </div>
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="Seventh Datum-1"
                style="position: absolute; left: 50px; top: 100px; height: 50px; width: 150px;"
              >
                <span>
                  Seventh Datum
                </span>
              </div>
              <div
                class="checkBoxColumn largeWideTableCell singleIcon"
                data-cell-id="Tenth Datum-0"
                style="position: absolute; left: 0px; top: 150px; height: 50px; width: 50px;"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-149 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-152"
                      data-indeterminate="false"
                      data-testid="table-checkbox-cell-tenth-datum"
                      id="Tenth Datum"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
              </div>
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="Tenth Datum-1"
                style="position: absolute; left: 50px; top: 150px; height: 50px; width: 150px;"
              >
                <span>
                  Tenth Datum
                </span>
              </div>
              <div
                class="checkBoxColumn largeWideTableCell singleIcon"
                data-cell-id="Thirteenth Datum-0"
                style="position: absolute; left: 0px; top: 200px; height: 50px; width: 50px;"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-149 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-152"
                      data-indeterminate="false"
                      data-testid="table-checkbox-cell-thirteenth-datum"
                      id="Thirteenth Datum"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
              </div>
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="Thirteenth Datum-1"
                style="position: absolute; left: 50px; top: 200px; height: 50px; width: 150px;"
              >
                <span>
                  Thirteenth Datum
                </span>
              </div>
              <div
                class="checkBoxColumn largeWideTableCell singleIcon"
                data-cell-id="Seventeenth Datum-0"
                style="position: absolute; left: 0px; top: 250px; height: 50px; width: 50px;"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-149 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-152"
                      data-indeterminate="false"
                      data-testid="table-checkbox-cell-seventeenth-datum"
                      id="Seventeenth Datum"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
              </div>
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="Seventeenth Datum-1"
                style="position: absolute; left: 50px; top: 250px; height: 50px; width: 150px;"
              >
                <span>
                  Seventeenth Datum
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="gridColumn"
        >
          <div
            style="overflow: visible; width: 0px;"
          />
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1px; height: 1px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render large wide simple table with dynamic row height 1`] = `
<div>
  <div
    class="tableContainer"
  >
    <div
      class="table"
    >
      <div
        class="gridRow"
      >
        <div
          class="frozenColumnsGridContainer"
          style="top: 0px;"
        >
          <div
            class="headerGrid"
            style="position: relative; height: 0px; width: 150px; overflow: auto; will-change: transform; direction: ltr;"
          >
            <div
              style="height: 0px; width: 150px;"
            >
              <div
                class="headerCell headerRow columnOne-header tableHeader isRightmostFrozenColumn"
                style="position: absolute; left: 0px; top: 0px; height: 0px; width: 150px;"
              >
                <div
                  class="headerText"
                >
                  Column One
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="frozenColumnsGridContainer"
          style="top: 0px;"
        >
          <div
            class="frozenColumnsGrid"
            style="position: relative; height: 280px; width: 150px; overflow: auto; will-change: transform; direction: ltr;"
          >
            <div
              style="height: 550px; width: 150px;"
            >
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="First Datum-0"
                style="position: absolute; left: 0px; top: 0px; height: 0px; width: 150px;"
              >
                <span>
                  First Datum
                </span>
              </div>
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="Fourth Datum-0"
                style="position: absolute; left: 0px; top: 0px; height: 50px; width: 150px;"
              >
                <span>
                  Fourth Datum
                </span>
              </div>
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="Seventh Datum-0"
                style="position: absolute; left: 0px; top: 50px; height: 100px; width: 150px;"
              >
                <span>
                  Seventh Datum
                </span>
              </div>
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="Tenth Datum-0"
                style="position: absolute; left: 0px; top: 150px; height: 150px; width: 150px;"
              >
                <span>
                  Tenth Datum
                </span>
              </div>
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="Thirteenth Datum-0"
                style="position: absolute; left: 0px; top: 300px; height: 200px; width: 150px;"
              >
                <span>
                  Thirteenth Datum
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="gridColumn"
        >
          <div
            style="overflow: visible; width: 0px;"
          />
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1px; height: 1px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render large wide simple table with no results 1`] = `
<div>
  <div
    class="tableContainer"
  >
    <p
      class="MuiTypography-root MuiTypography-body1"
    >
      No data
    </p>
  </div>
</div>
`;

exports[`render large wide simple table with no results and is loading 1`] = `
<div>
  <div
    class="tableContainer"
  >
    <div
      class="table"
    >
      <div
        class="gridRow"
      >
        <div
          class="frozenColumnsGridContainer"
          style="top: 0px;"
        >
          <div
            class="headerGrid"
            style="position: relative; height: 50px; width: 150px; overflow: auto; will-change: transform; direction: ltr;"
          >
            <div
              style="height: 50px; width: 150px;"
            >
              <div
                class="headerCell headerRow columnOne-header tableHeader isRightmostFrozenColumn"
                style="position: absolute; left: 0px; top: 0px; height: 50px; width: 150px;"
              >
                <div
                  class="headerText"
                >
                  Column One
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="frozenColumnsGridContainer"
          style="top: 50px;"
        >
          <div
            class="frozenColumnsGrid"
            style="position: relative; height: 230px; width: 150px; overflow: auto; will-change: transform; direction: ltr;"
          >
            <div
              style="height: 0px; width: 50px;"
            />
          </div>
        </div>
        <div
          class="gridColumn"
        >
          <div
            style="overflow: visible; width: 0px;"
          />
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1px; height: 1px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="spinnerOverlay active"
      data-is-active="true"
      data-testid="spinner-overlay"
    >
      <div
        class="loading"
      />
    </div>
  </div>
</div>
`;

exports[`render large wide simple table with set row height 1`] = `
<div>
  <div
    class="tableContainer"
  >
    <div
      class="table"
    >
      <div
        class="gridRow"
      >
        <div
          class="frozenColumnsGridContainer"
          style="top: 0px;"
        >
          <div
            class="headerGrid"
            style="position: relative; height: 75px; width: 150px; overflow: auto; will-change: transform; direction: ltr;"
          >
            <div
              style="height: 75px; width: 150px;"
            >
              <div
                class="headerCell headerRow columnOne-header tableHeader isRightmostFrozenColumn"
                style="position: absolute; left: 0px; top: 0px; height: 75px; width: 150px;"
              >
                <div
                  class="headerText"
                >
                  Column One
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="frozenColumnsGridContainer"
          style="top: 75px;"
        >
          <div
            class="frozenColumnsGrid"
            style="position: relative; height: 205px; width: 150px; overflow: auto; will-change: transform; direction: ltr;"
          >
            <div
              style="height: 400px; width: 150px;"
            >
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="First Datum-0"
                style="position: absolute; left: 0px; top: 0px; height: 75px; width: 150px;"
              >
                <span>
                  First Datum
                </span>
              </div>
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="Fourth Datum-0"
                style="position: absolute; left: 0px; top: 75px; height: 75px; width: 150px;"
              >
                <span>
                  Fourth Datum
                </span>
              </div>
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="Seventh Datum-0"
                style="position: absolute; left: 0px; top: 150px; height: 75px; width: 150px;"
              >
                <span>
                  Seventh Datum
                </span>
              </div>
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="Tenth Datum-0"
                style="position: absolute; left: 0px; top: 225px; height: 75px; width: 150px;"
              >
                <span>
                  Tenth Datum
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="gridColumn"
        >
          <div
            style="overflow: visible; width: 0px;"
          />
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1px; height: 1px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render loading simple table 1`] = `
<div>
  <div
    class="tableContainer"
  >
    <div
      class="table"
    >
      <div
        class="gridRow"
      >
        <div
          class="frozenColumnsGridContainer"
          style="top: 0px;"
        >
          <div
            class="headerGrid"
            style="position: relative; height: 50px; width: 0px; overflow: auto; will-change: transform; direction: ltr;"
          >
            <div
              style="height: 50px; width: 0px;"
            />
          </div>
        </div>
        <div
          class="frozenColumnsGridContainer"
          style="top: 50px;"
        >
          <div
            class="frozenColumnsGrid"
            style="position: relative; height: 230px; width: 0px; overflow: auto; will-change: transform; direction: ltr;"
          >
            <div
              style="height: 300px; width: 0px;"
            />
          </div>
        </div>
        <div
          class="gridColumn"
        >
          <div
            style="overflow: visible; width: 0px;"
          />
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1px; height: 1px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="spinnerOverlay active"
      data-is-active="true"
      data-testid="spinner-overlay"
    >
      <div
        class="loading"
      />
    </div>
  </div>
</div>
`;

exports[`render loading simple table 2`] = `
<div>
  <div
    class="tableContainer"
  >
    <div
      class="table"
    >
      <div
        class="gridRow"
      >
        <div
          class="frozenColumnsGridContainer"
          style="top: 0px;"
        >
          <div
            class="headerGrid"
            style="position: relative; height: 50px; width: 150px; overflow: auto; will-change: transform; direction: ltr;"
          >
            <div
              style="height: 50px; width: 150px;"
            >
              <div
                class="headerCell headerRow columnOne-header tableHeader isRightmostFrozenColumn"
                style="position: absolute; left: 0px; top: 0px; height: 50px; width: 150px;"
              >
                <div
                  class="headerText"
                >
                  Column One
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="frozenColumnsGridContainer"
          style="top: 50px;"
        >
          <div
            class="frozenColumnsGrid"
            style="position: relative; height: 230px; width: 150px; overflow: auto; will-change: transform; direction: ltr;"
          >
            <div
              style="height: 300px; width: 150px;"
            >
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="0-0"
                style="position: absolute; left: 0px; top: 0px; height: 50px; width: 150px;"
              >
                <span>
                  First Datum
                </span>
              </div>
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="1-0"
                style="position: absolute; left: 0px; top: 50px; height: 50px; width: 150px;"
              >
                <span>
                  Fourth Datum
                </span>
              </div>
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="2-0"
                style="position: absolute; left: 0px; top: 100px; height: 50px; width: 150px;"
              >
                <span>
                  Seventh Datum
                </span>
              </div>
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="3-0"
                style="position: absolute; left: 0px; top: 150px; height: 50px; width: 150px;"
              >
                <span>
                  Tenth Datum
                </span>
              </div>
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="4-0"
                style="position: absolute; left: 0px; top: 200px; height: 50px; width: 150px;"
              >
                <span>
                  Thirteenth Datum
                </span>
              </div>
              <div
                class="largeWideTableCell tableCell isRightmostFrozenColumn"
                data-cell-id="5-0"
                style="position: absolute; left: 0px; top: 250px; height: 50px; width: 150px;"
              >
                <span>
                  Seventeenth Datum
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="gridColumn"
        >
          <div
            style="overflow: visible; width: 0px;"
          />
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1px; height: 1px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="spinnerOverlay active"
      data-is-active="true"
      data-testid="spinner-overlay"
    >
      <div
        class="loading"
      />
    </div>
  </div>
</div>
`;
